--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>StatusMonitor</title>
-    <link rel="stylesheet" href="./css/main.css">
-    <script src="./js/jquery-1.12.0.min.js"></script>
+    <link rel="stylesheet" href="./main.css">
+    <script src="./jquery-1.12.0.min.js"></script>
 </head>
 <body>
 <table border="0" id="tab">
@@ -16,10 +16,10 @@
 </table>
 
      <script type = "text/javascript">
-        //´ı·ÃÎÊÏîÄ¿µÄÊı×é
+        //å¾…è®¿é—®é¡¹ç›®çš„æ•°ç»„
         var program = new Array("admin-billing-ui","admin-crm-ui","admin-oss-ui","admin-product-ui","admin-public-ui","partner-ui","knowledge-ui","customer-ui","operator-ui","portal-ui","resource-ui","worker-ui","account-service","account-center-service","area-service","card-service","card-center-service","channel-service","check-service","collection-service","collection-center-service","customer-service","customer-center-service","iom-service","iom-center-service","job-service","knowledge-service","message-center-service","note-service","note-center-service","order-service","order-center-service","partner-service","pms-center-service","pms-frontend-conax-service","pms-partition-service","problem-service","problem-center-service","product-service","resource-service","resource-center-service","system-service");
         
-        //ÔÚTableÖĞÌí¼ÓĞĞ¡¢ÁĞ,ÎªÃ¿ĞĞÃ¿ÁĞÌí¼ÓID£¬iĞĞ0ÁĞÌí¼ÓĞòÁĞºÅÎªi+1£¬iĞĞ1ÁĞIDÎªkey+i£¬iĞĞ2ÁĞIDÎªvalue+i£¨i=0,1,2...£©
+        //åœ¨Tableä¸­æ·»åŠ è¡Œã€åˆ—,ä¸ºæ¯è¡Œæ¯åˆ—æ·»åŠ IDï¼Œiè¡Œ0åˆ—æ·»åŠ åºåˆ—å·ä¸ºi+1ï¼Œiè¡Œ1åˆ—IDä¸ºkey+iï¼Œiè¡Œ2åˆ—IDä¸ºvalue+iï¼ˆi=0,1,2...ï¼‰
         var oTab = document.getElementById('tab');
         for(var i=0; i<program.length; i++){
             var oTr = document.createElement('tr');
@@ -41,7 +41,7 @@
             oTab.appendChild(oTr);
         }
         
-        // ¸ù¾İID¸øÃ¿Ò»ÁĞÌí¼ÓÄÚÈİ£¬µÚ0ÁĞÌí¼ÓĞòÁĞºÅ£¬µÚÒ»ÁĞÌí¼ÓÏîÄ¿Ãû£¬µÚ¶şÁĞÌí¼Ó´øÓĞIDµÄdiv£¬IDÖµÎªÏîÄ¿Ãû
+        // æ ¹æ®IDç»™æ¯ä¸€åˆ—æ·»åŠ å†…å®¹ï¼Œç¬¬0åˆ—æ·»åŠ åºåˆ—å·ï¼Œç¬¬ä¸€åˆ—æ·»åŠ é¡¹ç›®åï¼Œç¬¬äºŒåˆ—æ·»åŠ å¸¦æœ‰IDçš„divï¼ŒIDå€¼ä¸ºé¡¹ç›®å
         for(var i=0; i<program.length; i++){
             document.getElementById("series" + i).innerHTML = i+1;
             document.getElementById("key" + i).innerHTML = program[i];
